Fix X page-bleed

--- a/main.scss
+++ b/main.scss
@@ -10,6 +10,8 @@ html {
 
 body {
     height: 100vh;
+    width: 100vw;
+    overflow-x: hidden;
     top: 0;
 }
 
